<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/question_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/Theme.AppCompat.Light" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/math_quiz_enter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/button_enter_mathQuiz"
                android:background="@drawable/button_selector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/math_quiz_5"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="96dp"
                android:text="@string/button_five"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@drawable/button_selector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/math_quiz_8"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="16dp"
                android:text="@string/button_eight"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@drawable/button_selector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/math_quiz_4"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="96dp"
                android:text="@string/button_four"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@drawable/button_selector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.7"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/math_quiz_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/button_hint_mathQuiz"
                android:background="@drawable/button_selector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/math_quiz_2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="96dp"
                android:text="@string/button_two"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@drawable/button_selector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/math_quiz_7"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="16dp"
                android:text="@string/button_seven"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@drawable/button_selector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toStartOf="parent" />


            <Button
                android:id="@+id/math_quiz_3"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="96dp"
                android:text="@string/button_three"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@drawable/button_selector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/math_quiz_9"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="16dp"
                android:text="@string/button_nine"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@drawable/button_selector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.7"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/math_quiz_1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="96dp"
                android:text="@string/button_one"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@drawable/button_selector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/math_quiz_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/button_next_mathQuiz"
                android:background="@drawable/button_selector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/math_quiz_6"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="16dp"
                android:text="@string/button_six"
                android:background="@drawable/button_selector"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/math_quiz_0"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="16dp"
                android:text="@string/button_zero"
                android:background="@drawable/button_selector"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="341dp"
        android:layout_marginTop="36dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar">

        <TextView
            android:id="@+id/question_number2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/question_number_text"
            android:textColor="@color/colorGray"
            android:textSize="24sp"
            tools:text="Question X" />

        <TextView
            android:id="@+id/question_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/question_text"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            tools:text="Question X" />

        <TextView
            android:id="@+id/answer_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/empty_string"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>