<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="@dimen/material_emphasis_medium"
            android:theme="@style/AppTheme"
            app:navigationIcon="@drawable/abc_vector_test" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/confirmation_text"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="TextView"
            android:textSize="16sp"
            tools:text="@string/confirmation_cheat" />

        <TextView
            android:id="@+id/confirmation_info_text"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:gravity="center"
            android:text="TextView"
            tools:text="@string/confirmation_info_cheat" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/yesButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFF"
                    android:text="Button"
                    android:background="@drawable/rounded_button"
                    tools:text="@string/yes_cheat_button_text" />

                <Space
                    android:layout_width="30dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/noButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFF"
                    android:background="@drawable/rounded_button"
                    android:text="Button"
                    tools:text="@string/no_cheat_button_text"  />


            </LinearLayout>

        <Space
            android:layout_width="30dp"
            android:layout_height="30dp"/>

        <TextView
            android:id="@+id/answer_text"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:gravity="center"
            android:text="TextView"
            tools:text="@string/empty_string" />

        <Space
            android:layout_width="30dp"
            android:layout_height="30dp"/>

        <Button
            android:id="@+id/returnButton"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="30dp"
            android:layout_height="wrap_content"
            android:text="Button"
            android:textColor="#FFFF"
            android:background="@drawable/rounded_button"
            tools:text="@string/return_to_question_button_text" />



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>